WebShop.API/src/main/java/com/example/webshopapi/error/exception/CartNotFoundException.java
package com.example.webshopapi.error.exception;

public class CartNotFoundException extends RuntimeException {
    public CartNotFoundException(String message) {
        super(message);
    }
}